[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/tileset.tres" type="TileSet" id=1]
[ext_resource path="res://src/ui/StartMenu.gd" type="Script" id=2]
[ext_resource path="res://assets/ui/button-normal.tres" type="Texture" id=3]
[ext_resource path="res://assets/ui/button-focus.tres" type="Texture" id=4]
[ext_resource path="res://assets/ui/button-pressed.tres" type="Texture" id=5]
[ext_resource path="res://assets/font/font_menu.tres" type="DynamicFont" id=6]
[ext_resource path="res://assets/font/Alkhemikal.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://assets/wizard-Sheet.png" type="Texture" id=8]
[ext_resource path="res://src/ui/OptionsMenu.tscn" type="PackedScene" id=9]

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 24, 24 )

[sub_resource type="DynamicFont" id=2]
size = 64
outline_size = 3
outline_color = Color( 0.247059, 0.156863, 0.196078, 1 )
extra_spacing_char = 4
extra_spacing_space = 2
font_data = ExtResource( 7 )

[sub_resource type="Animation" id=1]
resource_name = "loop"
length = 10.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("TileMap:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5, 10 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -42, 16 ), Vector2( -32, 16 ), Vector2( -42, 16 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "options"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("OptionsMenu:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 270 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("OptionsMenu:modulate")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="StartMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TileMap" type="TileMap" parent="."]
position = Vector2( -42, 16 )
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( -196616, 16, 1, -196615, 16, 1, -196614, 16, 1, -196613, 16, 1, -196612, 16, 1, -196611, 16, 1, -196610, 16, 1, -196609, 16, 1, -262144, 16, 1, -262143, 16, 1, -262142, 16, 1, -262141, 16, 1, -262140, 16, 1, -262139, 16, 1, -262138, 16, 1, -262137, 16, 1, -262136, 16, 1, -262135, 16, 1, -262134, 16, 1, -262133, 16, 1, -262132, 16, 1, -262131, 3, 0, -262130, 3, 0, -262129, 3, 0, -262128, 3, 0, -262127, 3, 0, -262126, 3, 0, -262125, 3, 0, -262124, 3, 0, -262123, 3, 0, -262122, 3, 0, -262121, 3, 0, -262120, 3, 0, -262119, 3, 0, -262118, 3, 0, -262117, 3, 0, -262116, 3, 0, -262115, 3, 0, -262114, 3, 0, -262113, 3, 0, -262112, 3, 0, -262111, 3, 0, -262110, 3, 0, -262109, 3, 0, -262108, 3, 0, -262107, 3, 0, -262106, 3, 0, -262105, 3, 0, -262104, 3, 0, -131080, 16, 1, -131079, 16, 1, -131078, 16, 1, -131077, 16, 1, -131076, 16, 1, -131075, 16, 1, -131074, 16, 1, -131073, 16, 1, -196608, 16, 1, -196607, 16, 1, -196606, 16, 0, -196605, 16, 1, -196604, 16, 1, -196603, 16, 1, -196602, 16, 1, -196601, 16, 1, -196600, 16, 1, -196599, 16, 1, -196598, 16, 1, -196597, 16, 1, -196596, 16, 1, -196595, 16, 1, -196594, 16, 1, -196593, 3, 0, -196592, 3, 0, -196591, 3, 0, -196590, 3, 0, -196589, 3, 0, -196588, 3, 0, -196587, 3, 0, -196586, 3, 0, -196585, 3, 0, -196584, 3, 0, -196583, 3, 0, -196582, 3, 0, -196581, 3, 0, -196580, 3, 0, -196579, 3, 0, -196578, 3, 0, -196577, 3, 0, -196576, 3, 0, -196575, 3, 0, -196574, 3, 0, -196573, 3, 0, -196572, 3, 0, -196571, 3, 0, -196570, 3, 0, -196569, 3, 0, -196568, 3, 0, -65544, 16, 1, -65543, 16, 1, -65542, 16, 1, -65541, 16, 1, -65540, 16, 1, -65539, 16, 1, -65538, 16, 1, -65537, 16, 1, -131072, 16, 1, -131071, 16, 1, -131070, 16, 0, -131069, 16, 1, -131068, 16, 1, -131067, 16, 1, -131066, 16, 1, -131065, 16, 1, -131064, 16, 1, -131063, 16, 1, -131062, 16, 1, -131061, 16, 1, -131060, 16, 1, -131059, 16, 1, -131058, 16, 1, -131057, 16, 1, -131056, 16, 1, -131055, 3, 0, -131054, 3, 0, -131053, 3, 0, -131052, 3, 0, -131051, 3, 0, -131050, 3, 0, -131049, 3, 0, -131048, 3, 0, -131047, 3, 0, -131046, 3, 0, -131045, 3, 0, -131044, 3, 0, -131043, 3, 0, -131042, 3, 0, -131041, 3, 0, -131040, 3, 0, -131039, 3, 0, -131038, 3, 0, -131037, 3, 0, -131036, 3, 0, -131035, 3, 0, -131034, 3, 0, -131033, 3, 0, -131032, 3, 0, -8, 16, 1, -7, 16, 1, -6, 16, 1, -5, 16, 1, -4, 16, 1, -3, 16, 1, -2, 16, 1, -1, 16, 1, -65536, 16, 1, -65535, 16, 1, -65534, 16, 1, -65533, 16, 1, -65532, 16, 1, -65531, 16, 0, -65530, 16, 1, -65529, 16, 1, -65528, 16, 1, -65527, 16, 1, -65526, 16, 1, -65525, 16, 1, -65524, 16, 1, -65523, 16, 1, -65522, 16, 1, -65521, 16, 1, -65520, 16, 1, -65519, 3, 0, -65518, 3, 0, -65517, 3, 0, -65516, 3, 0, -65515, 3, 0, -65514, 3, 0, -65513, 3, 0, -65512, 3, 0, -65511, 3, 0, -65510, 3, 0, -65509, 3, 0, -65508, 3, 0, -65507, 3, 0, -65506, 3, 0, -65505, 3, 0, -65504, 3, 0, -65503, 3, 0, -65502, 3, 0, -65501, 3, 0, -65500, 3, 0, -65499, 3, 0, -65498, 3, 0, -65497, 3, 0, -65496, 3, 0, 65528, 16, 1, 65529, 16, 1, 65530, 16, 1, 65531, 16, 1, 65532, 16, 1, 65533, 16, 1, 65534, 16, 1, 65535, 16, 1, 0, 16, 1, 1, 16, 1, 2, 16, 1, 3, 16, 1, 4, 16, 1, 5, 16, 1, 6, 16, 1, 7, 16, 1, 8, 16, 1, 9, 16, 1, 10, 16, 1, 11, 16, 1, 12, 16, 1, 13, 16, 1, 14, 16, 1, 15, 16, 1, 16, 16, 1, 17, 3, 0, 18, 3, 0, 19, 3, 0, 20, 3, 0, 21, 3, 0, 22, 3, 0, 23, 3, 0, 24, 3, 0, 25, 3, 0, 26, 3, 0, 27, 3, 0, 28, 3, 0, 29, 3, 0, 30, 3, 0, 31, 3, 0, 32, 3, 0, 33, 3, 0, 34, 3, 0, 35, 3, 0, 36, 3, 0, 37, 3, 0, 38, 3, 0, 39, 3, 0, 40, 3, 0, 131064, 16, 1, 131065, 16, 1, 131066, 16, 1, 131067, 16, 1, 131068, 16, 1, 131069, 16, 1, 131070, 16, 1, 131071, 16, 1, 65536, 16, 1, 65537, 16, 1, 65538, 16, 1, 65539, 16, 1, 65540, 16, 1, 65541, 16, 1, 65542, 16, 1, 65543, 16, 1, 65544, 16, 1, 65545, 16, 1, 65546, 16, 1, 65547, 16, 1, 65548, 16, 1, 65549, 16, 1, 65550, 16, 1, 65551, 16, 1, 65552, 16, 1, 65553, 16, 1, 65554, 3, 0, 65555, 3, 0, 65556, 3, 0, 65557, 3, 0, 65558, 3, 0, 65559, 3, 0, 65560, 3, 0, 65561, 3, 0, 65562, 3, 0, 65563, 3, 0, 65564, 3, 0, 65565, 3, 0, 65566, 3, 0, 65567, 3, 0, 65568, 3, 0, 65569, 3, 0, 65570, 3, 0, 65571, 3, 0, 65572, 3, 0, 65573, 3, 0, 65574, 3, 0, 65575, 3, 0, 65576, 3, 0, 196600, 16, 1, 196601, 16, 1, 196602, 16, 1, 196603, 16, 1, 196604, 16, 1, 196605, 16, 1, 196606, 16, 1, 196607, 16, 1, 131072, 16, 1, 131073, 16, 1, 131074, 16, 1, 131075, 16, 1, 131076, 16, 1, 131077, 16, 1, 131078, 16, 1, 131079, 16, 1, 131080, 16, 1, 131081, 16, 1, 131082, 16, 1, 131083, 16, 1, 131084, 16, 1, 131085, 16, 1, 131086, 16, 1, 131087, 16, 1, 131088, 16, 1, 131089, 16, 1, 131090, 3, 0, 131091, 3, 0, 131092, 3, 0, 131093, 3, 0, 131094, 3, 0, 131095, 3, 0, 131096, 3, 0, 131097, 3, 0, 131098, 3, 0, 131099, 3, 0, 131100, 3, 0, 131101, 3, 0, 131102, 3, 0, 131103, 3, 0, 131104, 3, 0, 131105, 3, 0, 131106, 3, 0, 131107, 3, 0, 131108, 3, 0, 131109, 3, 0, 131110, 3, 0, 131111, 3, 0, 131112, 3, 0, 262136, 16, 1, 262137, 16, 1, 262138, 16, 1, 262139, 16, 1, 262140, 16, 1, 262141, 16, 1, 262142, 16, 1, 262143, 16, 1, 196608, 16, 1, 196609, 16, 1, 196610, 16, 0, 196611, 16, 1, 196612, 16, 1, 196613, 16, 1, 196614, 16, 1, 196615, 16, 1, 196616, 16, 1, 196617, 16, 1, 196618, 16, 1, 196619, 16, 1, 196620, 16, 1, 196621, 16, 1, 196622, 16, 1, 196623, 16, 1, 196624, 16, 1, 196625, 16, 1, 196626, 3, 0, 196627, 3, 0, 196628, 3, 0, 196629, 3, 0, 196630, 3, 0, 196631, 3, 0, 196632, 3, 0, 196633, 3, 0, 196634, 3, 0, 196635, 3, 0, 196636, 3, 0, 196637, 3, 0, 196638, 3, 0, 196639, 3, 0, 196640, 3, 0, 196641, 3, 0, 196642, 3, 0, 196643, 3, 0, 196644, 3, 0, 196645, 3, 0, 196646, 3, 0, 196647, 3, 0, 196648, 3, 0, 327672, 16, 1, 327673, 16, 1, 327674, 16, 1, 327675, 16, 1, 327676, 16, 1, 327677, 16, 1, 327678, 16, 1, 327679, 16, 1, 262144, 16, 1, 262145, 16, 0, 262146, 16, 1, 262147, 16, 1, 262148, 16, 1, 262149, 16, 1, 262150, 16, 1, 262151, 16, 1, 262152, 16, 1, 262153, 16, 1, 262154, 16, 1, 262155, 16, 1, 262156, 16, 1, 262157, 16, 1, 262158, 16, 1, 262159, 16, 1, 262160, 16, 1, 262161, 16, 1, 262162, 16, 1, 262163, 3, 0, 262164, 3, 0, 262165, 3, 0, 262166, 3, 0, 262167, 3, 0, 262168, 3, 0, 262169, 3, 0, 262170, 3, 0, 262171, 3, 0, 262172, 3, 0, 262173, 3, 0, 262174, 3, 0, 262175, 3, 0, 262176, 3, 0, 262177, 3, 0, 262178, 3, 0, 262179, 3, 0, 262180, 3, 0, 262181, 3, 0, 262182, 3, 0, 262183, 3, 0, 262184, 3, 0, 393208, 16, 1, 393209, 16, 1, 393210, 16, 1, 393211, 16, 1, 393212, 16, 1, 393213, 16, 1, 393214, 16, 1, 393215, 16, 1, 327680, 16, 1, 327681, 16, 1, 327682, 16, 1, 327683, 16, 1, 327684, 16, 1, 327685, 16, 1, 327686, 16, 1, 327687, 16, 1, 327688, 16, 1, 327689, 16, 1, 327690, 16, 1, 327691, 16, 1, 327692, 16, 1, 327693, 16, 1, 327694, 16, 1, 327695, 16, 1, 327696, 16, 1, 327697, 16, 1, 327698, 16, 1, 327699, 16, 1, 327700, 3, 0, 327701, 3, 0, 327702, 3, 0, 327703, 3, 0, 327704, 3, 0, 327705, 3, 0, 327706, 3, 0, 327707, 3, 0, 327708, 3, 0, 327709, 3, 0, 327710, 3, 0, 327711, 3, 0, 327712, 3, 0, 327713, 3, 0, 327714, 3, 0, 327715, 3, 0, 327716, 3, 0, 327717, 3, 0, 327718, 3, 0, 327719, 3, 0, 327720, 3, 0, 458744, 16, 1, 458745, 16, 1, 458746, 16, 1, 458747, 16, 1, 458748, 16, 1, 458749, 16, 1, 458750, 16, 1, 458751, 16, 1, 393216, 16, 1, 393217, 16, 1, 393218, 16, 1, 393219, 16, 1, 393220, 16, 1, 393221, 16, 1, 393222, 16, 1, 393223, 16, 1, 393224, 16, 1, 393225, 16, 1, 393226, 16, 1, 393227, 16, 1, 393228, 16, 1, 393229, 16, 1, 393230, 16, 1, 393231, 16, 1, 393232, 16, 1, 393233, 16, 1, 393234, 16, 1, 393235, 16, 1, 393236, 3, 0, 393237, 3, 0, 393238, 3, 0, 393239, 3, 0, 393240, 3, 0, 393241, 3, 0, 393242, 3, 0, 393243, 3, 0, 393244, 3, 0, 393245, 3, 0, 393246, 3, 0, 393247, 3, 0, 393248, 3, 0, 393249, 3, 0, 393250, 3, 0, 393251, 3, 0, 393252, 3, 0, 393253, 3, 0, 393254, 3, 0, 393255, 3, 0, 393256, 3, 0, 524280, 16, 1, 524281, 16, 1, 524282, 16, 1, 524283, 16, 1, 524284, 16, 1, 524285, 16, 1, 524286, 16, 1, 524287, 16, 1, 458752, 16, 1, 458753, 16, 1, 458754, 16, 1, 458755, 16, 1, 458756, 16, 1, 458757, 16, 1, 458758, 16, 1, 458759, 16, 1, 458760, 16, 1, 458761, 16, 1, 458762, 16, 1, 458763, 16, 1, 458764, 16, 1, 458765, 16, 0, 458766, 16, 1, 458767, 16, 1, 458768, 16, 1, 458769, 16, 1, 458770, 16, 1, 458771, 16, 1, 458772, 16, 1, 458773, 3, 0, 458774, 3, 0, 458775, 3, 0, 458776, 3, 0, 458777, 3, 0, 458778, 3, 0, 458779, 3, 0, 458780, 3, 0, 458781, 3, 0, 458782, 3, 0, 458783, 3, 0, 458784, 3, 0, 458785, 3, 0, 458786, 3, 0, 458787, 3, 0, 458788, 3, 0, 458789, 3, 0, 458790, 3, 0, 458791, 3, 0, 458792, 3, 0, 589816, 16, 1, 589817, 16, 1, 589818, 16, 1, 589819, 16, 1, 589820, 16, 1, 589821, 16, 1, 589822, 16, 1, 589823, 16, 1, 524288, 16, 1, 524289, 16, 1, 524290, 16, 1, 524291, 16, 1, 524292, 16, 1, 524293, 16, 1, 524294, 16, 1, 524295, 16, 1, 524296, 16, 1, 524297, 16, 1, 524298, 16, 1, 524299, 16, 1, 524300, 16, 1, 524301, 16, 1, 524302, 16, 1, 524303, 16, 1, 524304, 16, 1, 524305, 16, 1, 524306, 16, 1, 524307, 16, 1, 524308, 16, 1, 524309, 16, 1, 524310, 3, 0, 524311, 3, 0, 524312, 3, 0, 524313, 3, 0, 524314, 3, 0, 524315, 3, 0, 524316, 3, 0, 524317, 3, 0, 524318, 3, 0, 524319, 3, 0, 524320, 3, 0, 524321, 3, 0, 524322, 3, 0, 524323, 3, 0, 524324, 3, 0, 524325, 3, 0, 524326, 3, 0, 524327, 3, 0, 524328, 3, 0, 655352, 16, 1, 655353, 16, 1, 655354, 16, 1, 655355, 16, 1, 655356, 16, 1, 655357, 16, 1, 655358, 16, 1, 655359, 16, 1, 589824, 16, 1, 589825, 16, 1, 589826, 16, 1, 589827, 16, 1, 589828, 16, 1, 589829, 16, 1, 589830, 16, 1, 589831, 16, 1, 589832, 16, 1, 589833, 16, 1, 589834, 16, 1, 589835, 16, 1, 589836, 16, 1, 589837, 16, 1, 589838, 16, 1, 589839, 16, 1, 589840, 16, 1, 589841, 16, 1, 589842, 16, 1, 589843, 16, 1, 589844, 16, 1, 589845, 16, 1, 589846, 16, 1, 589847, 16, 1, 589848, 3, 0, 589849, 3, 0, 589850, 3, 0, 589851, 3, 0, 589852, 3, 0, 589853, 3, 0, 589854, 3, 0, 589855, 3, 0, 589856, 3, 0, 589857, 3, 0, 589858, 3, 0, 589859, 3, 0, 589860, 3, 0, 589861, 3, 0, 589862, 3, 0, 589863, 3, 0, 589864, 3, 0, 720888, 16, 1, 720889, 16, 1, 720890, 16, 1, 720891, 16, 1, 720892, 16, 1, 720893, 16, 1, 720894, 16, 1, 720895, 16, 1, 655360, 16, 1, 655361, 16, 0, 655362, 16, 0, 655363, 16, 1, 655364, 16, 1, 655365, 16, 1, 655366, 16, 1, 655367, 16, 1, 655368, 16, 1, 655369, 16, 0, 655370, 16, 1, 655371, 16, 1, 655372, 16, 1, 655373, 16, 1, 655374, 16, 1, 655375, 16, 1, 655376, 16, 1, 655377, 16, 1, 655378, 16, 1, 655379, 16, 1, 655380, 16, 1, 655381, 16, 1, 655382, 16, 1, 655383, 16, 1, 655384, 16, 1, 655385, 16, 1, 655386, 3, 0, 655387, 3, 0, 655388, 3, 0, 655389, 3, 0, 655390, 3, 0, 655391, 3, 0, 655392, 3, 0, 655393, 3, 0, 655394, 3, 0, 655395, 3, 0, 655396, 3, 0, 655397, 3, 0, 655398, 3, 0, 655399, 3, 0, 655400, 3, 0, 786424, 16, 1, 786425, 16, 1, 786426, 16, 1, 786427, 16, 1, 786428, 16, 0, 786429, 16, 1, 786430, 16, 1, 786431, 16, 1, 720896, 16, 1, 720897, 16, 1, 720898, 16, 1, 720899, 16, 1, 720900, 16, 1, 720901, 16, 1, 720902, 16, 1, 720903, 16, 1, 720904, 16, 1, 720905, 16, 1, 720906, 16, 1, 720907, 16, 1, 720908, 16, 1, 720909, 16, 1, 720910, 16, 1, 720911, 16, 1, 720912, 16, 1, 720913, 16, 1, 720914, 16, 1, 720915, 16, 1, 720916, 16, 1, 720917, 16, 1, 720918, 16, 1, 720919, 16, 0, 720920, 16, 1, 720921, 16, 1, 720922, 3, 0, 720923, 3, 0, 720924, 3, 0, 720925, 3, 0, 720926, 3, 0, 720927, 3, 0, 720928, 3, 0, 720929, 3, 0, 720930, 3, 0, 720931, 3, 0, 720932, 3, 0, 720933, 3, 0, 720934, 3, 0, 720935, 3, 0, 720936, 3, 0, 851960, 16, 1, 851961, 16, 1, 851962, 16, 1, 851963, 16, 1, 851964, 16, 1, 851965, 16, 1, 851966, 16, 1, 851967, 16, 1, 786432, 16, 1, 786433, 16, 1, 786434, 16, 1, 786435, 16, 1, 786436, 16, 1, 786437, 16, 1, 786438, 16, 1, 786439, 16, 1, 786440, 16, 1, 786441, 16, 1, 786442, 16, 1, 786443, 16, 1, 786444, 16, 1, 786445, 16, 1, 786446, 16, 1, 786447, 16, 1, 786448, 16, 1, 786449, 16, 1, 786450, 16, 1, 786451, 16, 1, 786452, 16, 1, 786453, 16, 1, 786454, 16, 1, 786455, 16, 1, 786456, 16, 1, 786457, 16, 1, 786458, 16, 1, 786459, 16, 1, 786460, 16, 1, 786461, 3, 0, 786462, 3, 0, 786463, 3, 0, 786464, 3, 0, 786465, 3, 0, 786466, 3, 0, 786467, 3, 0, 786468, 3, 0, 786469, 3, 0, 786470, 3, 0, 786471, 3, 0, 786472, 3, 0, 917496, 16, 1, 917497, 16, 1, 917498, 16, 0, 917499, 16, 1, 917500, 16, 1, 917501, 16, 1, 917502, 16, 1, 917503, 16, 1, 851968, 16, 1, 851969, 16, 1, 851970, 16, 1, 851971, 16, 1, 851972, 16, 1, 851973, 16, 1, 851974, 16, 1, 851975, 16, 1, 851976, 16, 1, 851977, 16, 1, 851978, 16, 1, 851979, 16, 1, 851980, 16, 1, 851981, 16, 1, 851982, 16, 1, 851983, 16, 1, 851984, 16, 1, 851985, 16, 1, 851986, 16, 1, 851987, 16, 1, 851988, 16, 1, 851989, 16, 1, 851990, 16, 1, 851991, 16, 1, 851992, 16, 1, 851993, 16, 1, 851994, 16, 1, 851995, 16, 1, 851996, 16, 1, 851997, 16, 1, 851998, 16, 1, 851999, 16, 1, 852000, 3, 0, 852001, 3, 0, 852002, 3, 0, 852003, 3, 0, 852004, 3, 0, 852005, 3, 0, 852006, 3, 0, 852007, 3, 0, 852008, 3, 0, 983032, 16, 1, 983033, 16, 1, 983034, 16, 1, 983035, 16, 1, 983036, 16, 1, 983037, 16, 0, 983038, 16, 1, 983039, 16, 1, 917504, 16, 1, 917505, 16, 1, 917506, 16, 1, 917507, 16, 1, 917508, 16, 1, 917509, 16, 1, 917510, 16, 1, 917511, 16, 1, 917512, 16, 1, 917513, 16, 1, 917514, 16, 1, 917515, 16, 1, 917516, 16, 1, 917517, 16, 1, 917518, 16, 1, 917519, 16, 1, 917520, 16, 1, 917521, 16, 1, 917522, 16, 1, 917523, 16, 0, 917524, 16, 1, 917525, 16, 1, 917526, 16, 1, 917527, 16, 1, 917528, 16, 1, 917529, 16, 1, 917530, 16, 1, 917531, 16, 1, 917532, 16, 1, 917533, 16, 1, 917534, 16, 1, 917535, 16, 1, 917536, 16, 1, 917537, 3, 0, 917538, 3, 0, 917539, 3, 0, 917540, 3, 0, 917541, 3, 0, 917542, 3, 0, 917543, 3, 0, 917544, 3, 0, 1048568, 16, 1, 1048569, 16, 1, 1048570, 16, 1, 1048571, 16, 1, 1048572, 16, 1, 1048573, 16, 1, 1048574, 16, 1, 1048575, 16, 1, 983040, 16, 1, 983041, 16, 1, 983042, 16, 1, 983043, 16, 1, 983044, 16, 1, 983045, 16, 1, 983046, 16, 1, 983047, 16, 1, 983048, 16, 1, 983049, 16, 1, 983050, 16, 1, 983051, 16, 1, 983052, 16, 1, 983053, 16, 1, 983054, 16, 1, 983055, 16, 1, 983056, 16, 1, 983057, 16, 1, 983058, 16, 1, 983059, 16, 1, 983060, 16, 1, 983061, 16, 1, 983062, 16, 1, 983063, 16, 1, 983064, 16, 1, 983065, 16, 1, 983066, 16, 1, 983067, 16, 1, 983068, 16, 1, 983069, 16, 1, 983070, 16, 1, 983071, 16, 1, 983072, 16, 1, 983073, 16, 1, 983074, 16, 1, 983075, 16, 1, 983076, 3, 0, 983077, 3, 0, 983078, 3, 0, 983079, 3, 0, 983080, 3, 0, 1114104, 16, 1, 1114105, 16, 0, 1114106, 16, 1, 1114107, 16, 1, 1114108, 16, 1, 1114109, 16, 1, 1114110, 16, 1, 1114111, 16, 1, 1048576, 16, 1, 1048577, 16, 1, 1048578, 16, 1, 1048579, 16, 1, 1048580, 16, 1, 1048581, 16, 1, 1048582, 16, 1, 1048583, 16, 1, 1048584, 16, 1, 1048585, 16, 1, 1048586, 16, 1, 1048587, 16, 1, 1048588, 16, 1, 1048589, 16, 1, 1048590, 16, 1, 1048591, 16, 1, 1048592, 16, 1, 1048593, 16, 1, 1048594, 16, 1, 1048595, 16, 1, 1048596, 16, 1, 1048597, 16, 1, 1048598, 16, 1, 1048599, 16, 1, 1048600, 16, 1, 1048601, 16, 1, 1048602, 16, 1, 1048603, 16, 1, 1048604, 16, 1, 1048605, 16, 1, 1048606, 16, 1, 1048607, 16, 1, 1048608, 16, 1, 1048609, 16, 1, 1048610, 16, 1, 1048611, 16, 1, 1048612, 16, 1, 1048613, 3, 0, 1048614, 3, 0, 1048615, 3, 0, 1048616, 3, 0, 1179640, 16, 1, 1179641, 16, 1, 1179642, 16, 1, 1179643, 16, 1, 1179644, 16, 1, 1179645, 16, 1, 1179646, 16, 1, 1179647, 16, 1, 1114112, 16, 1, 1114113, 16, 0, 1114114, 16, 1, 1114115, 16, 1, 1114116, 16, 1, 1114117, 16, 1, 1114118, 16, 1, 1114119, 16, 1, 1114120, 16, 1, 1114121, 16, 1, 1114122, 16, 1, 1114123, 16, 1, 1114124, 16, 1, 1114125, 16, 1, 1114126, 16, 1, 1114127, 16, 1, 1114128, 16, 1, 1114129, 16, 1, 1114130, 16, 0, 1114131, 16, 1, 1114132, 16, 1, 1114133, 16, 1, 1114134, 16, 1, 1114135, 16, 1, 1114136, 16, 1, 1114137, 16, 1, 1114138, 16, 1, 1114139, 16, 1, 1114140, 16, 1, 1114141, 16, 1, 1114142, 16, 0, 1114143, 16, 0, 1114144, 16, 1, 1114145, 16, 1, 1114146, 16, 1, 1114147, 16, 1, 1114148, 16, 1, 1114149, 3, 0, 1114150, 3, 0, 1114151, 3, 0, 1114152, 3, 0, 1245176, 16, 1, 1245177, 16, 0, 1245178, 16, 1, 1245179, 16, 1, 1245180, 16, 1, 1245181, 16, 1, 1245182, 16, 1, 1245183, 16, 1, 1179648, 16, 1, 1179649, 16, 1, 1179650, 16, 1, 1179651, 16, 1, 1179652, 16, 0, 1179653, 16, 1, 1179654, 16, 1, 1179655, 16, 1, 1179656, 16, 1, 1179657, 16, 1, 1179658, 16, 1, 1179659, 16, 1, 1179660, 16, 1, 1179661, 16, 0, 1179662, 16, 1, 1179663, 16, 1, 1179664, 16, 1, 1179665, 16, 1, 1179666, 16, 1, 1179667, 16, 1, 1179668, 16, 1, 1179669, 16, 1, 1179670, 16, 1, 1179671, 16, 1, 1179672, 16, 1, 1179673, 16, 0, 1179674, 16, 1, 1179675, 16, 1, 1179676, 16, 0, 1179677, 16, 1, 1179678, 16, 1, 1179679, 16, 1, 1179680, 16, 1, 1179681, 16, 1, 1179682, 16, 0, 1179683, 16, 1, 1179684, 16, 1, 1179685, 16, 1, 1179686, 16, 1, 1179687, 3, 0, 1179688, 3, 0, 1310712, 16, 1, 1310713, 16, 1, 1310714, 16, 1, 1310715, 16, 1, 1310716, 16, 1, 1310717, 16, 1, 1310718, 16, 1, 1310719, 16, 1, 1245184, 16, 1, 1245185, 16, 1, 1245186, 16, 1, 1245187, 16, 1, 1245188, 16, 1, 1245189, 16, 1, 1245190, 16, 1, 1245191, 16, 1, 1245192, 16, 1, 1245193, 16, 1, 1245194, 16, 1, 1245195, 16, 1, 1245196, 16, 1, 1245197, 16, 1, 1245198, 16, 1, 1245199, 16, 1, 1245200, 16, 1, 1245201, 16, 1, 1245202, 16, 1, 1245203, 16, 1, 1245204, 16, 1, 1245205, 16, 1, 1245206, 16, 1, 1245207, 16, 1, 1245208, 16, 1, 1245209, 16, 1, 1245210, 16, 0, 1245211, 16, 1, 1245212, 16, 1, 1245213, 16, 1, 1245214, 16, 1, 1245215, 16, 1, 1245216, 16, 1, 1245217, 16, 1, 1245218, 16, 1, 1245219, 16, 1, 1245220, 16, 1, 1245221, 16, 0, 1245222, 16, 1, 1245223, 16, 1, 1245224, 3, 0, 1376248, 16, 1, 1376249, 16, 1, 1376250, 16, 1, 1376251, 16, 1, 1376252, 16, 1, 1376253, 16, 1, 1376254, 16, 1, 1376255, 16, 1, 1310720, 16, 1, 1310721, 16, 1, 1310722, 16, 1, 1310723, 16, 1, 1310724, 16, 1, 1310725, 16, 1, 1310726, 16, 1, 1310727, 16, 1, 1310728, 16, 1, 1310729, 16, 1, 1310730, 16, 1, 1310731, 16, 1, 1310732, 16, 1, 1310733, 16, 1, 1310734, 16, 1, 1310735, 16, 1, 1310736, 16, 1, 1310737, 16, 1, 1310738, 16, 1, 1310739, 16, 1, 1310740, 16, 1, 1310741, 16, 1, 1310742, 16, 0, 1310743, 16, 1, 1310744, 16, 1, 1310745, 16, 0, 1310746, 16, 1, 1310747, 16, 1, 1310748, 16, 1, 1310749, 16, 1, 1310750, 16, 1, 1310751, 16, 1, 1310752, 16, 1, 1310753, 16, 1, 1310754, 16, 1, 1310755, 16, 1, 1310756, 16, 1, 1310757, 16, 1, 1310758, 16, 1, 1310759, 16, 1, 1310760, 3, 0, 1441784, 16, 1, 1441785, 16, 1, 1441786, 16, 1, 1441787, 16, 1, 1441788, 16, 1, 1441789, 16, 1, 1441790, 16, 1, 1441791, 16, 1, 1376256, 16, 1, 1376257, 16, 1, 1376258, 16, 1, 1376259, 16, 1, 1376260, 16, 0, 1376261, 16, 1, 1376262, 16, 1, 1376263, 16, 1, 1376264, 16, 1, 1376265, 16, 0, 1376266, 16, 1, 1376267, 16, 1, 1376268, 16, 1, 1376269, 16, 1, 1376270, 16, 1, 1376271, 16, 1, 1376272, 16, 1, 1376273, 16, 1, 1376274, 16, 1, 1376275, 16, 1, 1376276, 16, 1, 1376277, 16, 1, 1376278, 16, 1, 1376279, 16, 1, 1376280, 16, 1, 1376281, 16, 1, 1376282, 16, 1, 1376283, 16, 1, 1376284, 16, 0, 1376285, 16, 1, 1376286, 16, 1, 1376287, 16, 1, 1376288, 16, 1, 1376289, 16, 1, 1376290, 16, 1, 1376291, 16, 1, 1376292, 16, 1, 1376293, 16, 1, 1376294, 16, 1, 1376295, 16, 1, 1376296, 16, 1, 1507320, 16, 1, 1507321, 16, 1, 1507322, 16, 1, 1507323, 16, 1, 1507324, 16, 1, 1507325, 16, 1, 1507326, 16, 1, 1507327, 16, 1, 1441792, 16, 1, 1441793, 16, 1, 1441794, 16, 1, 1441795, 16, 1, 1441796, 16, 1, 1441797, 16, 1, 1441798, 16, 1, 1441799, 16, 1, 1441800, 16, 1, 1441801, 16, 1, 1441802, 16, 1, 1441803, 16, 1, 1441804, 16, 1, 1441805, 16, 1, 1441806, 16, 1, 1441807, 16, 1, 1441808, 16, 1, 1441809, 16, 1, 1441810, 16, 1, 1441811, 16, 1, 1441812, 16, 1, 1441813, 16, 1, 1441814, 16, 1, 1441815, 16, 1, 1441816, 16, 1, 1441817, 16, 1, 1441818, 16, 1, 1441819, 16, 1, 1441820, 16, 1, 1441821, 16, 1, 1441822, 16, 1, 1441823, 16, 1, 1441824, 16, 1, 1441825, 16, 1, 1441826, 16, 1, 1441827, 16, 1, 1441828, 16, 1, 1441829, 16, 1, 1441830, 16, 1, 1441831, 16, 1, 1441832, 16, 1 )

[node name="Sprite" type="Sprite" parent="TileMap"]
position = Vector2( 315, 126 )
texture = SubResource( 3 )

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -203.0
margin_top = -117.0
margin_right = 203.0
margin_bottom = -53.0
custom_fonts/font = SubResource( 2 )
text = "DESERT MAGE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="Menu"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 8.0
margin_top = -36.0
margin_right = 136.0
margin_bottom = 120.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="TextureButton" parent="Menu/GridContainer"]
margin_right = 128.0
margin_bottom = 36.0
focus_neighbour_top = NodePath("../QuitButton")
focus_neighbour_bottom = NodePath("../OptionsButton")
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 4 )
texture_disabled = ExtResource( 3 )
texture_focused = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Menu/GridContainer/StartButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -9.0
margin_right = 20.0
margin_bottom = 5.0
custom_fonts/font = ExtResource( 6 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsButton" type="TextureButton" parent="Menu/GridContainer"]
margin_top = 40.0
margin_right = 128.0
margin_bottom = 76.0
focus_neighbour_top = NodePath("../StartButton")
focus_neighbour_bottom = NodePath("../CreditsButton")
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 4 )
texture_disabled = ExtResource( 3 )
texture_focused = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Menu/GridContainer/OptionsButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -9.0
margin_right = 20.0
margin_bottom = 5.0
custom_fonts/font = ExtResource( 6 )
text = "Options"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreditsButton" type="TextureButton" parent="Menu/GridContainer"]
margin_top = 80.0
margin_right = 128.0
margin_bottom = 116.0
focus_neighbour_top = NodePath("../OptionsButton")
focus_neighbour_bottom = NodePath("../QuitButton")
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 4 )
texture_disabled = ExtResource( 3 )
texture_focused = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Menu/GridContainer/CreditsButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -9.0
margin_right = 20.0
margin_bottom = 5.0
custom_fonts/font = ExtResource( 6 )
text = "Credits"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="TextureButton" parent="Menu/GridContainer"]
margin_top = 120.0
margin_right = 128.0
margin_bottom = 156.0
focus_neighbour_top = NodePath("../CreditsButton")
focus_neighbour_bottom = NodePath("../StartButton")
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 4 )
texture_disabled = ExtResource( 3 )
texture_focused = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Menu/GridContainer/QuitButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -9.0
margin_right = 20.0
margin_bottom = 5.0
custom_fonts/font = ExtResource( 6 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsMenu" type="Control" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 270.0
margin_bottom = 270.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="OptionsMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.509804 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsMenu" parent="OptionsMenu" instance=ExtResource( 9 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -89.4996
margin_top = -97.0
margin_right = 89.4996
margin_bottom = 97.0

[node name="BgAnimationPlayer" type="AnimationPlayer" parent="."]
method_call_mode = 1
anims/loop = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/options = SubResource( 4 )
[connection signal="pressed" from="Menu/GridContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="Menu/GridContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="Menu/GridContainer/CreditsButton" to="." method="_on_CreditsButton_pressed"]
[connection signal="pressed" from="Menu/GridContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="confirmed" from="OptionsMenu/OptionsMenu" to="." method="_on_OptionsMenu_confirmed"]
